soap-coffee/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: soap-coffee
spec:
  selector:
    app: soap-coffee
  ports:
    - port: 80
      targetPort: http
      name: http
