soap-coffee/ingress.yaml
---
# The site is a garage bucket
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soap-coffee
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - soap.coffee
      secretName: soap-coffee-tls
  rules:
    - host: soap.coffee
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garage
                port:
                  name: web
